--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -10,11 +10,11 @@
         <div class="converter">
             <h1>Currency Converter</h1>
             <div class="tabs">
-                <mat-tab-group>
+                <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">>
                     <mat-tab>
                       <ng-template mat-tab-label>
                         <mat-icon class="example-tab-icon">monetization_on</mat-icon>
-                        <h6>Convert</h6>
+                        Convert
                       </ng-template>
                       Content 1
                     </mat-tab>
