--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -8,57 +8,30 @@ body {
     
 }
 .converter {
-    // max-width: 400px;
-    // margin-top: 6px;
+    
     margin: 0 auto;
     padding: 20px;
-    // border-radius: 5px;
-    // box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+   
 h1 {
     color: #0e0f0f;
     font-size: 24px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-label {
-    display: block;
-    font-weight: bold;
-    margin: 10px 0;
-}
-input[type="number"] {
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
-select {
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
-button {
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 3px;
-    cursor: pointer;
-}
-#result {
-    font-weight: bold;
-    font-size: 18px;
-    margin: 20px 0;
-}
+
 .tabs{
-    background-color: rgb(62, 66, 80);
-    border-radius: 10px;
+    min-width: 30px !important;
+    background-color: rgb(190, 191, 196);
+    border-radius: 15px;
+    display: flex !important;
+   flex-direction: row !important;
+   justify-content: space-between !important;
+   margin-left: 50px;
 }
-mat-tab{
-    max-width: 50px;
+mat-icon{
+    
+    margin-right: 10px;
 }
-p{
-    color: #ccc;
-}
+.mat-tab-label {
+    flex: 1 !important; 
+  }
