--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -7,31 +7,6 @@ body {
     text-align: center;
     
 }
-.converter {
-    
-    margin: 0 auto;
-    padding: 20px;
+.custom-padding{
+    padding-top: 20px;  
 }
-   
-h1 {
-    color: #0e0f0f;
-    font-size: 24px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.tabs{
-    min-width: 30px !important;
-    background-color: rgb(190, 191, 196);
-    border-radius: 15px;
-    display: flex !important;
-   flex-direction: row !important;
-   justify-content: space-between !important;
-   margin-left: 50px;
-}
-mat-icon{
-    
-    margin-right: 10px;
-}
-.mat-tab-label {
-    flex: 1 !important; 
-  }
