--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -29,7 +29,7 @@ h1 {
     margin-top: 50px;
     display: flex;
     // flex-direction: column;
-    align-items: center;
+    // align-items: center;
     justify-content: center;
    
 }
@@ -52,14 +52,14 @@ span {
 ::ng-deep .mat-tab-label {
     min-width: 200px;
     /* Adjust the width according to your preference */
-    justify-content: left;
+  
     /* Optional: Centers the content horizontally */
 }
 
 button {
     float: right;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    // margin-right: 10px;
+    // margin-bottom: 10px;
 }
 
 
@@ -80,9 +80,9 @@ button {
     /* Set the focus border color to black or your desired color */
 }
 
-.example-container mat-form-field + mat-form-field {
-    margin-left: 8px;
-}
+// .example-container mat-form-field + mat-form-field {
+//     margin-left: 8px;
+// }
 
 .example-right-align {
     text-align: right;
@@ -116,19 +116,10 @@ input.example-right-align::-webkit-inner-spin-button {
     /* Adjust the padding to ensure the input starts after the dollar sign */
 }
 
-.fields {
-    float: left;
-    margin-left: 6vh;
-    // margin-top: 30px;
+.fields{
+    padding-top: 1vh;
 }
-.amount{
-    top: 10vh !important;
-    margin-right: 150vh;
-}
-.from{
-    top: 10vh !important;
-}
-.to{
-  margin-right: 70vh;
+.container{
+    display: flex;
 }
 
