--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -122,4 +122,11 @@ input.example-right-align::-webkit-inner-spin-button {
 .container{
     display: flex;
 }
+.row{
+    margin-right: 10px;
+}
+.convertButton{
+    float:right;
+    margin-top: 55px;
+}
 
